acceptance/tests/fixtures/cases/api-gateways/auto-tls/gatewayclassconfig.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: consul.hashicorp.com/v1alpha1
kind: GatewayClassConfig
metadata:
  name: auto-tls-gateway-class-config
spec:
  mapPrivilegedContainerPorts: 8000
