acceptance/tests/fixtures/cases/api-gateways/auto-tls/httproute.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auto-tls-route
spec:
  parentRefs:
  - name: auto-tls-gateway
  rules:
  - backendRefs:
    - name: static-server
      port: 80
